examples/errors/out_of_bounds.spl
foo() {
    var a = [];
    return a.hd;
}

main() {
    var i = foo();
    return;
}